// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsageCard Renders Dont UsageCard when kind=dont 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  position: absolute;
  right: 16px;
  top: 16px;
  z-index: 1;
}

.emotion-2 {
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 32px;
  height: 32px;
  min-height: 32px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 32px;
  height: 32px;
  padding: 0;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-style: solid;
  border-color: #D60000;
  background-color: #FEECEC;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-2 svg {
  width: 16px;
  height: 16px;
}

.emotion-2 svg {
  fill: #D60000;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #D60000;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
  fill: #D60000;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3.emotion-3 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3.emotion-3 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-5 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  box-sizing: border-box;
}

.emotion-7 {
  box-sizing: border-box;
  padding: 0;
}

.emotion-7 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-8 {
  margin-bottom: 16px;
}

.emotion-9 {
  border-style: solid;
  border-color: #D60000;
  border-width: 4px;
  border-radius: 4px;
  border-width: 0px;
  margin: 0;
  border-top-width: 4px;
  width: 100%;
}

.emotion-11 {
  font-family: "Poppins",sans-serif;
  font-size: 24px;
  line-height: 27px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-11::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-11::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-12 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #D60000;
}

.emotion-12 svg {
  fill: #D60000;
}

.emotion-14 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-14 svg {
  fill: #2E3F54;
}

.emotion-14::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-14::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        data-testid="flag"
      >
        <svg
          aria-hidden="true"
          class="emotion-3 emotion-4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
          />
        </svg>
      </div>
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-6"
      >
        <div
          class="emotion-7"
        >
          <div
            class="emotion-8"
          >
            <hr
              aria-hidden="true"
              class="emotion-9"
              data-testid="divider"
            />
            <div
              class="emotion-8"
            />
            <section
              class="emotion-11"
            >
              <h1
                class="nk-headline-heading emotion-12"
              >
                Don’t
              </h1>
            </section>
          </div>
          <div
            class="emotion-8"
          >
            <p
              class="emotion-14"
            >
              Description
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UsageCard Renders default (Do) UsageCard 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  position: absolute;
  right: 16px;
  top: 16px;
  z-index: 1;
}

.emotion-2 {
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 32px;
  height: 32px;
  min-height: 32px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 32px;
  height: 32px;
  padding: 0;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-style: solid;
  border-color: #007B22;
  background-color: #E5F4EA;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-2 svg {
  width: 16px;
  height: 16px;
}

.emotion-2 svg {
  fill: #007B22;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #007B22;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
  fill: #007B22;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3.emotion-3 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3.emotion-3 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-5 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  box-sizing: border-box;
}

.emotion-7 {
  box-sizing: border-box;
  padding: 0;
}

.emotion-7 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-8 {
  margin-bottom: 16px;
}

.emotion-9 {
  border-style: solid;
  border-color: #007B22;
  border-width: 4px;
  border-radius: 4px;
  border-width: 0px;
  margin: 0;
  border-top-width: 4px;
  width: 100%;
}

.emotion-11 {
  font-family: "Poppins",sans-serif;
  font-size: 24px;
  line-height: 27px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-11::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-11::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-12 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #007B22;
}

.emotion-12 svg {
  fill: #007B22;
}

.emotion-14 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-14 svg {
  fill: #2E3F54;
}

.emotion-14::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-14::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        data-testid="flag"
      >
        <svg
          aria-hidden="true"
          class="emotion-3 emotion-4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
          />
        </svg>
      </div>
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-6"
      >
        <div
          class="emotion-7"
        >
          <div
            class="emotion-8"
          >
            <hr
              aria-hidden="true"
              class="emotion-9"
              data-testid="divider"
            />
            <div
              class="emotion-8"
            />
            <section
              class="emotion-11"
            >
              <h1
                class="nk-headline-heading emotion-12"
              >
                Do
              </h1>
            </section>
          </div>
          <div
            class="emotion-8"
          >
            <p
              class="emotion-14"
            >
              Description
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
